# opensovd-core

./: .clippy.toml  .dockerignore  .envrc  .gitignore  .gitmessage  .markdownlint.yaml  .pre-commit-config.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  deny.toml  devenv.nix  devenv.yaml  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labeler.yaml
.github/actions/docker-publish/: action.yaml
.github/workflows/: ci.yaml  first-interaction.yaml  labeler.yaml
benches/: Cargo.toml
benches/src/: main.rs  topology.rs
docker/: Dockerfile  Dockerfile.gateway  Dockerfile.mcp
docs/: architecture.md  ci.md  development.md  testing.md
examples/client/: Cargo.toml
examples/client/src/: client.rs
examples/server/: Cargo.toml
examples/server/auth/: auth.rs  sovd_authz.rego  sovd_data.json
examples/server/mtls/: mtls.rs
examples/server/simple/: README.md  sampler.yaml  simple.rs
examples/server/systemd/: systemd.rs
opensovd-cli/gateway/: Cargo.toml  README.md
opensovd-cli/gateway/src/: cli.rs  cors.rs  main.rs  serve_dir.rs
opensovd-cli/lib/: Cargo.toml
opensovd-cli/lib/src/: lib.rs  trace.rs
opensovd-cli/mcp/: Cargo.toml  README.md  build.rs
opensovd-cli/mcp/src/: cli.rs  main.rs
opensovd-client/: Cargo.toml
opensovd-client/src/: client.rs  data.rs  error.rs  lib.rs  list.rs  unix.rs
opensovd-client/src/entities/: app.rs  area.rs  component.rs  mod.rs
opensovd-client/tests/: apps.rs  areas.rs  client.rs  components.rs  data.rs  unix.rs
opensovd-client/tests/common/: mod.rs
opensovd-core/: Cargo.toml
opensovd-core/src/: data.rs  discovery.rs  lib.rs  topology.rs
opensovd-core/src/entity/: app.rs  area.rs  component.rs  mod.rs
opensovd-extra/: Cargo.toml
opensovd-extra/src/: lib.rs  unit.rs
opensovd-extra/src/auth/: jwt.rs  mod.rs  rego.rs
opensovd-mocks/: Cargo.toml  README.md
opensovd-mocks/src/: lib.rs
opensovd-models/: Cargo.toml
opensovd-models/src/: data.rs  discovery.rs  error.rs  lib.rs  types.rs  version.rs
opensovd-providers/: Cargo.toml
opensovd-providers/src/: lib.rs
opensovd-providers/src/data/: builder.rs  constant.rs  mod.rs  resource.rs
opensovd-server/: Cargo.toml  README.md
opensovd-server/src/: auth.rs  body.rs  connect_info.rs  lib.rs  schema.rs  server.rs  tls.rs
opensovd-server/src/routes/: data.rs  error.rs  mod.rs  version.rs
opensovd-server/src/routes/entities/: app.rs  area.rs  component.rs  mod.rs
opensovd-server/tests/: auth.rs  builder.rs  routes.rs
opensovd-server/tests/common/: mod.rs
scripts/: mkcerts.sh
tests/: conftest.py  fixtures.py  test_api.py  test_rust.py  test_signals.py  test_version.py
tests/bruno/: bruno.json  conftest.py
tests/bruno/environments/: local.bru
tests/bruno/middleware/: folder.bru
tests/bruno/middleware/cors/: folder.bru  preflight-request.bru
tests/bruno/version-info/: folder.bru  get-version-info-bad-param.bru  get-version-info-with-schema.bru  get-version-info-without-schema.bru  get-version-info.bru
tests/cli/: __init__.py  conftest.py  test_auth.py  test_cors.py  test_mock.py  test_mtls.py  test_tls.py  test_transport_tcp.py  test_transport_unix_abstract.py  test_transport_unix_socket.py  test_version.py
