# SPDX-FileCopyrightText: Copyright (c) 2026 Contributors to the Eclipse Foundation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "opensovd-mocks"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
opensovd-core = { workspace = true }
opensovd-models = { workspace = true }
opensovd-providers = { workspace = true }

[lints]
workspace = true
