# SPDX-FileCopyrightText: Copyright (c) 2026 Contributors to the Eclipse Foundation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "libcli"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono = { workspace = true, features = ["clock"] }
http = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[dev-dependencies]
libc = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lints]
workspace = true
